added more explanations in code

--- a/test/index.html
+++ b/test/index.html
@@ -7,10 +7,10 @@
     <title>Editor</title>
     <link rel="stylesheet" href="../src/style.css" />
     <link rel="stylesheet" href="./myStyle.css" />
-    <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/out/core.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/out/JavaScript.js" defer></script>
-    <!-- <script src="../src/JavaScript.js" defer></script> -->
-    <!-- <script src="../out/JS.min.js" defer></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/core.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/JavaScript.js" defer></script> -->
+    <script src="../src/core.js" defer></script>
+    <script src="../src/JavaScript.js" defer></script>
     <script src="./test.js" defer></script>
   </head>
   <body>
