updated entire filesystem

--- a/test/index.html
+++ b/test/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="./myStyle.css" />
     <!-- <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/core.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/JavaScript.js" defer></script> -->
-    <script src="../src/core.js" defer></script>
-    <script src="../src/JavaScript.js" defer></script>
+    <!-- <script src="../src/core.js" defer></script>
+    <script src="../src/JavaScript.js" defer></script> -->
+    <script src="../dist/core.js" defer></script>
+    <script src="../dist/JavaScript.js" defer></script>
     <script src="./test.js" defer></script>
   </head>
   <body>
