--- a/test/index.html
+++ b/test/index.html
@@ -23,10 +23,14 @@
     <div class="container">
       <div class="b1">
         <pre class="JS-colorful colorful" id="editor-output">function a(arg1, arg2 = {abc: def}) {
-	ar
+	arguments   d,
+	arg1,
+	arg
 }
 (arr, abc) => {arr}
-arr => {arr}</pre>
+arr => {arr}
+arguments, (arr) String()
+</pre>
         <textarea id="editor-active" placeholder="" spellcheck="false"></textarea>
       </div>
       <div class="block">
