--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,8 @@
     <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/JavaScript.js" defer></script> -->
     <!-- <script src="../src/core.js" defer></script>
     <script src="../src/JavaScript.js" defer></script> -->
-    <script src="../src/core.js" defer></script>
-    <script src="../src/JavaScript.js" defer></script>
+    <script src="../dist/core.js" defer></script>
+    <script src="../dist/JavaScript.js" defer></script>
     <script src="./test.js" defer></script>
   </head>
   <body>
@@ -98,9 +98,9 @@ arguments, (arr) String()
 		* Only handles bracket/brace/paren un matches only in one way: either break and return tokens or continue.
 		*
 		* possible values: {
-		*	breakOnBraceUnmatch: true/false,
-		*	breakOnParenUnmatch: true/false,
-		*	breakOnBracketUnmatch: true/false
+		*  breakOnBraceUnmatch: true/false,
+		*  breakOnParenUnmatch: true/false,
+		*  breakOnBracketUnmatch: true/false
 		* }
 		* @return {Object}
 		*
@@ -111,7 +111,9 @@ arguments, (arr) String()
 		var tokens = [],
 			word = "",
 			scopeTree = [], // list like structure defines where current tokenisation is happening
-			scope = "empty"; // recent scope
+			argNames = [], // list of argument names
+			argScope = [], // cumulated scope number of arguments
+			scope = ""; // recent scope
 		var i = 0;
 		while (i &lt; len) {
 			word = text.substring(i).match(nameCharRE);
@@ -224,27 +226,41 @@ arguments, (arr) String()
 						i++;
 					}
 				} else if (next2 == "=>") {
+					// arrow expression
 					if (prevTkn.type == "TEXT") {
+						/* highlights single argument
+							arg => {...}
+							^^^
+						*/
 						prevTkn.type = "ARGUMENT";
-					} else if (/\)\s*$/.test(prevTkn.token)) {
-						var initialScopeLevel = scopeTree.length;
-						var argsarr = [tokens[tokens.length - 1]];
+						argNames.push(prevTkn.token.trim()); // trim the token to et arguments name
+						argScope.push((argScope[argScope.length - 1] || 0) + 1);
+						scope = "function"; // after this should be a function
+					} else if (/\)\s*$/.test(prevTkn.token)) { 
+						/* reads multiple arguments
+							(arg1, arg2, argn) => {...}
+								^^^^  ^^^^  ^^^^
+						*/
+						var initialScopeLevel = scopeTree.length; // current scope
+						var toReadArray = [tokens[tokens.length - 1]]; // array of tokens to read
 						for (var k = tokens.length - 2; k >= 0; k--) {
 							var tk = tokens[k];
-							argsarr.push(tk);
+							toReadArray.push(tk);
 							if (tk.type == T_OTHER && tk.scopeLevel == initialScopeLevel) {
+								// reached `(`
 								tokens.splice(k);
 								break;
 							}
 						}
-						argsarr.reverse();
-						readArgumentsInTokens(argsarr, initialScopeLevel + 1, false);
+						// reverse the array
+						toReadArray.reverse();
+						// reads arguments
+						readArgumentsInTokens(toReadArray, initialScopeLevel+1);
 					}
-					addToken(T_OPERATOR, next2);
+					addToken(T_OPERATOR, next2); // add `=>` to tokens
 					i += 2;
 				} else {
-					//operator
-					addToken(T_OPERATOR, char);
+					addToken(T_OPERATOR, char); //regular operator
 					i++;
 				}
 			} else if (char == "(") {
@@ -283,6 +299,12 @@ arguments, (arr) String()
 					"]": "breakOnBracketUnmatch",
 				};
 				if (scopeTree.length > 0) {
+					if (char == "}" && argScope.length && scopeTree[scopeTree.length-1] == "function") {
+						// if (argNames[0] == "tokens") debugger
+						argNames.splice(argScope[argScope.length-2]);
+						argScope.pop();
+						// console.log(argNames, argScope)
+					}
 					scopeTree.pop();
 				} else if (ErrHandler[handler[char]]) {
 					break;
@@ -306,7 +328,8 @@ arguments, (arr) String()
 		}
 
 		// read arguments
-		function readArgumentsInTokens(tks, base = 0, increase = true) {
+		function readArgumentsInTokens(tks, base = 0) {
+			var nos = 0;
 			for (var k = 0; k &lt; tks.length; k++) {
 				var tk = tks[k];
 				if (
@@ -314,11 +337,15 @@ arguments, (arr) String()
 					tk.scopeLevel == base &&
 					tks[k - 1]?.type != T_OPERATOR
 				) {
+					nos++
 					tk.type = T_ARGUMENT;
+					argNames.push(tk.token.trim());
 				}
-				if (increase) tk.scopeLevel++;
 			}
 			tokens = tokens.concat(tks);
+			if (nos) argScope.push(nos + (argScope[argScope.length-1] || 0))
+			console.log(argNames, argScope)
+			scope = "function";
 		}
 
 		// finds the type of word given
@@ -326,31 +353,29 @@ arguments, (arr) String()
 			var prevt = prevTkn.token || "";
 			if (
 				KeywordRE.test(word) || // global keywords
-				(word == "arguments" &&
-					scopeTree[scopeTree.length - 1] == "function") || // argument inside function clause
 				((word == "get" || word == "set") &&
 					scopeTree[scopeTree.length - 1] == "class") // get/set inside class scope
 			) {
 				// Keyword
-				if (
-					/(function|if|do|while|for|class|catch|else|finally|switch|try|)/.test(
-						word
-					)
+				if (/(function|if|do|while|for|class|catch|else|finally|switch|try)/.test(word)
 				) {
-					scope = word;
+					scope = word.trim();
 				}
 				addToken(T_KEY, word);
 			} else if (
 				builtInObject.test(word) &&
 				!/^(function|var|const|let)/.test(prevt) &&
-				prevt[0] != "."
+				!/(\.\s*)$/.test(prevt)
 			) {
 				// builtin objects word
 				addToken(T_CAPITAL, word);
-			} else if (/(\.)(\s*)$/.test(prevt)) {
+			} else if (/(\.\s*)$/.test(prevt)) {
 				// object property
 				addToken(T_OBJECTPROP, word);
+			} else if (argNames.indexOf(word) > -1 || (word == "arguments" && scopeTree[scopeTree.length - 1] == "function")) {
+				addToken(T_ARGUMENT, word);
 			} else {
+				// argument inside function clause
 				addToken(T_TEXT, word);
 			}
 		}
@@ -395,8 +420,7 @@ arguments, (arr) String()
 		tokenize: tokenize,
 		parse: parse,
 	};
-})(window);
-</pre>
+})(window);</pre>
 			</div>
 		</div>
 	</body>
