--- a/test/index.html
+++ b/test/index.html
@@ -16,21 +16,12 @@
     <script src="./test.js" defer></script>
   </head>
   <body>
-    <!-- <img src="C:/Users/Rupesh/Pictures/Screenshots/Screenshot (35).png"> -->
     <h1>Colorful</h1>
     <p>A JavaScript library that higlights JavaScript codes</p>
     <p>Examples:</p>
     <div class="container">
       <div class="b1">
-        <pre class="JS-colorful colorful" id="editor-output">function a(arg1, arg2 = {abc: def}) {
-	arguments   d,
-	arg1,
-	arg
-}
-(arr, abc) => {arr}
-arr => {arr}
-arguments, (arr) String()
-</pre>
+        <pre class="JS-colorful colorful" id="editor-output"></pre>
         <textarea id="editor-active" placeholder="" spellcheck="false"></textarea>
       </div>
       <div class="block">
