--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,8 @@
     <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/JavaScript.js" defer></script> -->
     <!-- <script src="../src/core.js" defer></script>
     <script src="../src/JavaScript.js" defer></script> -->
-    <script src="../src/core.js" defer></script>
-    <script src="../src/JavaScript.js" defer></script>
+    <script src="../dist/core.js" defer></script>
+    <script src="../dist/JavaScript.js" defer></script>
     <script src="./test.js" defer></script>
   </head>
   <body>
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="b1">
         <pre class="JS-colorful colorful" id="editor-output"></pre>
-        <textarea id="editor-active" placeholder="" spellcheck="false"></textarea>
+        <textarea id="editor-active" placeholder="Paste your code here" spellcheck="false"></textarea>
       </div>
       <div class="block">
         <p>The source code of this project with line numbers: </p>
