--- a/test/index.html
+++ b/test/index.html
@@ -21,17 +21,17 @@
     <p>Examples:</p>
     <div class="container">
       <div class="b1">
-        <pre class="JS-colorful colorful" id="editor-output"></pre>
+        <pre class="JS-colorful" id="editor-output"></pre>
         <textarea id="editor-active" placeholder="Paste your code here" spellcheck="false"></textarea>
       </div>
       <div class="block">
         <p>The source code of this project with line numbers: </p>
-        <pre class="JS-colorful colorful" lineNumbering>(function (w) {
+        <pre class="JS-colorful" lineNumbering>(function (w) {
 	// RegExes
 	var KeywordRE =
-		/^(await|break|case|catch|class|const|continue|debugger|default|delete|do|else|enum|export|extends|false|finally|for|function|if|implements|import|in|instanceof|interface|let|native|new|null|package|private|protected|public|return|static|super|switch|this|throw|true|try|typeof|undefined|var|void|while|with|yield)$/;
-	var operatorRE = /[=+\-*/%!&lt;>&|:?]*/;
-	var nameCharRE = /^[\w\u00C0-\uffff\$]+/;
+		/^(async|await|break|case|catch|class|const|continue|debugger|default|delete|do|else|export|extends|false|finally|for|function|if|implements|import|in|instanceof|interface|let|new|null|package|return|static|super|switch|this|throw|true|try|typeof|undefined|var|void|while|with|yield)$/;
+	var operatorRE = /[-=+*/%!&lt;>&|:?]/;
+	var nameCharRE = /^[\wÀ-￿$]+/u; // \w, $ and from \u00c0 to \uffff
 
 	// modified regex from Prism: https://github.com/PrismJS/prism/blob/master/components/prism-javascript.js#L21
 	var number =
@@ -39,49 +39,26 @@
 
 	var commentRE = /((\/\*[\s\S]*?\*\/|\/\*[\s\S]*)|(\/\/.*))/;
 	var regexRE =
-		/^\/((?![*+?])(?:[^\r\n\[/\\]|\\.|\[(?:[^\r\n\]\\]|\\.)*\])+)\/((?:g(?:im?|mi?)?|i(?:gm?|mg?)?|m(?:gi?|ig?)?)?)/;
+		/^\/((?![*+?])(?:[^\r\n\[/\\]|\\.|\[(?:[^\r\n\]\\]|\\.)*\])+)\/[gimyus]*/;
 	// builtIn objects
 	var builtInObject =
 		/^(AggregateError|Buffer|Array|ArrayBuffer|AsyncFunction|AsyncGenerator|AsyncGeneratorFunction|Atomics|BigInt|BigInt64Array|BigUint64Array|Boolean|DataView|Date|Error|EvalError|Float32Array|Float64Array|Function|Generator|GeneratorFunction|Int16Array|Int32Array|Int8Array|InternalError|Intl|JSON|Map|Math|Number|Object|Promise|Proxy|RangeError|ReferenceError|Reflect|RegExp|Set|SharedArrayBuffer|String|Symbol|SyntaxError|TypeError|URIError|Uint16Array|Uint32Array|Uint8Array|Uint8ClampedArray|WeakMap|WeakSet|WebAssembly)$/;
 	var whitespace = /[\s]+/;
 	// types of tokens
-	const T_STRING = "STRING",
-		T_KEY = "KEY",
-		T_TEXT = "TEXT",
-		T_OPERATOR = "OPERATOR",
-		T_COMMENT = "COMMENT",
-		T_NUMBER = "NUMBER",
-		T_ARGUMENT = "ARGUMENT",
-		T_CAPITAL = "CAPITAL",
-		T_OBJECTPROP = "OBJECTPROP",
-		T_METHOD = "METHOD",
-		T_REGEX = "REGEX",
-		T_OTHER = "OTHER";
+	const T_NAME = "NAME", // A
+		T_OBJECTPROP = "OBJECTPROP", // B
+		T_KEY = "KEY", // C
+		T_COMMENT = "COMMENT", // D
+		T_NUMBER = "NUMBER", // E
+		T_ARGUMENT = "ARGUMENT", // F
+		T_BUILTIN = "BUILTIN", // G
+		T_METHOD = "METHOD", // H
+		T_STRING = "STRING", // I
+		T_REGEX = "REGEX", // J
+		T_OPERATOR = "OPERATOR", // K
+		T_OTHER = "OTHER"; // L
 	// an empty token
 	var emptyToken = { type: "", token: "" };
-
-	/**
-		* combines tokenizer and parser
-		* @param {HTMLElement} container
-		* @param {Object} cfg
-		*/
-	function highlight(container, cfg = w.Colorful.config) {
-		var text = container.innerText;
-		var d1 = w.performance.now();
-		var out = tokenize(text);
-		var markuped = parse(out.tokens);
-		var compileTime = w.performance.now() - d1;
-		container.innerHTML = w.Colorful.finishUp(cfg, text, markuped);
-		var speed = ((text.length / 1024 / compileTime) * 1000).toFixed(3); //kb/s
-		console.log(
-			`total code analysed: ${(text.length / 1024).toFixed(3)} KiB\nfound: ${
-				out.tokens.length
-			} tokens\ncompile time: ${compileTime.toFixed(
-				4
-			)} ms\ncompile speed: ${speed} KiB/s`
-		);
-	}
-
 	/**
 		* tokenize input text
 		* @param {String} text text to be tokenised
@@ -137,7 +114,7 @@
 				var space = text.substring(i).match(whitespace)[0];
 				if (prevTkn.token) prevTkn.token += space;
 				// if a token exists in the list add whitespaces to it
-				else addToken(T_TEXT, space); // if there is no previous tokens
+				else addToken(T_NAME, space); // if there is no previous tokens
 				i += space.length;
 			} else if (char == "'" || char == '"' || char == "`") {
 				// string ahead
@@ -185,7 +162,7 @@
 						}
 					}
 				}
-			} else if (char.match(operatorRE)[0]) {
+			} else if (operatorRE.test(char)) {
 				var nxt = text.substring(i);
 				var prevt = prevTkn.type;
 				if (next2 == "//" || next2 == "/*") {
@@ -195,7 +172,11 @@
 					addToken(T_COMMENT, comment);
 				} else if (
 					char == "/" &&
-					!((prevt == T_TEXT && !/^\s+$/.test(prevTkn.token)) || prevt == T_OBJECTPROP || prevt == T_NUMBER) &&
+					!(
+						(prevt == T_NAME && !/^\s+$/.test(prevTkn.token)) ||
+						prevt == T_OBJECTPROP ||
+						prevt == T_NUMBER
+					) &&
 					regexRE.test(nxt)
 				) {
 					// regular expression ahead
@@ -203,7 +184,7 @@
 					var tk = tokens[tokens.length - 2]?.type;
 					if (
 						prevTkn.type == T_COMMENT &&
-						(tk == T_TEXT || tk == T_OBJECTPROP || tk == T_NUMBER)
+						(tk == T_NAME || tk == T_OBJECTPROP || tk == T_NUMBER)
 					) {
 						regExAhead = false;
 					}
@@ -218,16 +199,16 @@
 					}
 				} else if (next2 == "=>") {
 					// arrow expression
-					if (prevTkn.type == "TEXT") {
+					if (prevTkn.type == T_NAME) {
 						/* highlights single argument
 							arg => {...}
 							^^^
 						*/
-						prevTkn.type = "ARGUMENT";
-						argNames.push(prevTkn.token.trim()); // trim the token to et arguments name
+						prevTkn.type = T_ARGUMENT;
+						argNames.push(prevTkn.token.trim()); // trim the token to get arguments name
 						argScope.push((argScope[argScope.length - 1] || 0) + 1);
 						scope = "function"; // after this should be a function
-					} else if (/\)\s*$/.test(prevTkn.token)) { 
+					} else if (/\)\s*$/.test(prevTkn.token)) {
 						/* reads multiple arguments
 							(arg1, arg2, argn) => {...}
 								^^^^  ^^^^  ^^^^
@@ -246,7 +227,7 @@
 						// reverse the array
 						toReadArray.reverse();
 						// reads arguments
-						readArgumentsInTokens(toReadArray, initialScopeLevel+1);
+						readArgumentsInTokens(toReadArray, initialScopeLevel + 1);
 					}
 					addToken(T_OPERATOR, next2); // add `=>` to tokens
 					i += 2;
@@ -260,18 +241,18 @@
 				var prevt = prev.type;
 				var pprev = tokens[tokens.length - 2] || emptyToken;
 				const isFunctionClause =
-					(prev.token.substr(0, 8) == "function" && prevt == "KEY") ||
-					(pprev.token.substr(0, 8) == "function" && pprev.type == "KEY") ||
+					(prev.token.match(/function\s*$/) && prevt == T_KEY) ||
+					(pprev.token.match(/function\s*$/) && pprev.type == T_KEY) ||
 					scopeTree[scopeTree.length - 1] == "class";
 				addToken(T_OTHER, "(");
 				i++;
 				scopeTree.push("(");
 				scope = "(";
 				// makes name of function colored to method
-				if (prevt == "TEXT" || prevt == "OBJECTPROP") {
+				if (prevt == T_NAME || prevt == T_OBJECTPROP) {
 					prev.type = T_METHOD;
 				}
-				if (isFunctionClause && next2 != "()") {
+				if (isFunctionClause) {
 					// reads arguments
 					var tkn = tokenize(text.substring(i), { breakOnParenUnmatch: true });
 					var tkns = tkn.tokens;
@@ -279,7 +260,7 @@
 					i += tkn.inputEnd;
 				}
 			} else if (char == "{" || char == "[") {
-				addToken("OTHER", char);
+				addToken(T_OTHER, char);
 				i++;
 				scopeTree.push(scope);
 				scope = char;
@@ -290,20 +271,22 @@
 					"]": "breakOnBracketUnmatch",
 				};
 				if (scopeTree.length > 0) {
-					if (char == "}" && argScope.length && scopeTree[scopeTree.length-1] == "function") {
-						// if (argNames[0] == "tokens") debugger
-						argNames.splice(argScope[argScope.length-2]);
+					if (
+						char == "}" &&
+						argScope.length &&
+						scopeTree[scopeTree.length - 1] == "function"
+					) {
+						argNames.splice(argScope[argScope.length - 2]);
 						argScope.pop();
-						// console.log(argNames, argScope)
 					}
 					scopeTree.pop();
 				} else if (ErrHandler[handler[char]]) {
 					break;
 				}
-				addToken("OTHER", char);
+				addToken(T_OTHER, char);
 				i++;
 			} else {
-				addToken("OTHER", char);
+				addToken(T_OTHER, char);
 				i++;
 			}
 			window.Colorful.mergeSameTypes(tokens);
@@ -324,18 +307,17 @@
 			for (var k = 0; k &lt; tks.length; k++) {
 				var tk = tks[k];
 				if (
-					(tk.type == T_TEXT || tk.type == T_CAPITAL) &&
+					(tk.type == T_NAME || tk.type == T_BUILTIN) &&
 					tk.scopeLevel == base &&
 					tks[k - 1]?.type != T_OPERATOR
 				) {
-					nos++
+					nos++;
 					tk.type = T_ARGUMENT;
 					argNames.push(tk.token.trim());
 				}
 			}
 			tokens = tokens.concat(tks);
-			if (nos) argScope.push(nos + (argScope[argScope.length-1] || 0))
-			console.log(argNames, argScope)
+			if (nos) argScope.push(nos + (argScope[argScope.length - 1] || 0) + 1);
 			scope = "function";
 		}
 
@@ -348,69 +330,35 @@
 					scopeTree[scopeTree.length - 1] == "class") // get/set inside class scope
 			) {
 				// Keyword
-				if (/(function|if|do|while|for|class|catch|else|finally|switch|try)/.test(word)
-				) {
-					scope = word.trim();
-				}
 				addToken(T_KEY, word);
+				if (
+					/(function|if|do|while|for|class|catch|else|finally|switch|try)/.test(
+						word
+					)
+				) {
+					scope = word;
+				}
 			} else if (
-				builtInObject.test(word) &&
-				!/^(function|var|const|let)/.test(prevt) &&
-				!/(\.\s*)$/.test(prevt)
+				(builtInObject.test(word) &&
+					!/^(function|var|const|let|interface)/.test(prevt) &&
+					!/(\.\s*)$/.test(prevt)) ||
+				(word == "constructor" && scopeTree[scopeTree.length - 1] == "class")
 			) {
 				// builtin objects word
-				addToken(T_CAPITAL, word);
+				addToken(T_BUILTIN, word);
 			} else if (/(\.\s*)$/.test(prevt)) {
 				// object property
 				addToken(T_OBJECTPROP, word);
-			} else if (argNames.indexOf(word) > -1 || (word == "arguments" && scopeTree[scopeTree.length - 1] == "function")) {
+			} else if (argNames.indexOf(word) > -1 || word == "arguments") {
+				// argument inside function clause
 				addToken(T_ARGUMENT, word);
 			} else {
-				// argument inside function clause
-				addToken(T_TEXT, word);
+				addToken(T_NAME, word);
 			}
 		}
 	}
 
-	/**
-		* parse tokens to generate html string
-		* @param {Array} tokens array of tokens
-		* @return {String}
-		*/
-	function parse(tokens) {
-		var formatted = ``;
-		var d = {
-			TEXT: "name",
-			OBJECTPROP: "objprop",
-			KEY: "keyword",
-			COMMENT: "comment",
-			NUMBER: "number",
-			ARGUMENT: "argument",
-			CAPITAL: "capital",
-			METHOD: "method",
-			STRING: "string",
-			REGEX: "regex",
-			OPERATOR: "operator",
-		};
-		for (var i = 0; i &lt; tokens.length; i++) {
-			var tkn = tokens[i],
-				tokenType = tkn.type;
-			if (tokenType != "OTHER") {
-				formatted +=
-					"&lt;span class='" + d[tokenType] + "'>" + tkn.token + "&lt;/span>";
-			} else {
-				formatted += tkn.token;
-			}
-		}
-		return formatted;
-	}
-
-	w.Colorful.langs.push("JS");
-	w.Colorful.compilers.JS = {
-		compile: highlight,
-		tokenize: tokenize,
-		parse: parse,
-	};
+	w.Colorful.tokenizers.JS = tokenize;
 })(window);</pre>
 			</div>
 		</div>
