--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,8 @@
     <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/JavaScript.js" defer></script> -->
     <!-- <script src="../src/core.js" defer></script>
     <script src="../src/JavaScript.js" defer></script> -->
-    <script src="../dist/core.js" defer></script>
-    <script src="../dist/JavaScript.js" defer></script>
+    <script src="../src/core.js" defer></script>
+    <script src="../src/JavaScript.js" defer></script>
     <script src="./test.js" defer></script>
   </head>
   <body>
@@ -24,9 +24,13 @@
         <pre class="JS-colorful" id="editor-output"></pre>
         <textarea id="editor-active" placeholder="Paste your code here" spellcheck="false"></textarea>
       </div>
+			<div class="block">
+				<p>HTML Code</p>
+				<pre class="HTML-colorful"></pre>
+			</div>
       <div class="block">
         <p>The source code of this project with line numbers: </p>
-        <pre class="JS-colorful" lineNumbering>(function (w) {
+        <pre class="JS-colorfuld" lineNumbering>(function (w) {
 	// RegExes
 	var KeywordRE =
 		/^(async|await|break|case|catch|class|const|continue|debugger|default|delete|do|else|export|extends|false|finally|for|function|if|implements|import|in|instanceof|interface|let|new|null|package|return|static|super|switch|this|throw|true|try|typeof|undefined|var|void|while|with|yield)$/;
