--- a/test/index.html
+++ b/test/index.html
@@ -22,16 +22,16 @@
     <p>Examples:</p>
     <div class="container">
       <div class="b1">
-        <pre class="HTML-colorful" id="editor-output"></pre>
+        <pre class="cf-HTML" id="editor-output"></pre>
         <textarea id="editor-active" placeholder="Paste your code here" spellcheck="false"></textarea>
       </div>
 			<div class="block">
 				<p>HTML Code</p>
-				<pre class="HTML-colorful"></pre>
+				<pre class="cf-HTML"></pre>
 			</div>
       <div class="block">
         <p>The source code of this project with line numbers: </p>
-        <pre class="JS-colorful" lineNumbering>(function (w) {
+        <pre class="cf-JS" lineNumbering>(function (w) {
 	// RegExes
 	var KeywordRE =
 		/^(async|await|break|case|catch|class|const|continue|debugger|default|delete|do|else|export|extends|false|finally|for|function|if|implements|import|in|instanceof|interface|let|new|null|package|return|static|super|switch|this|throw|true|try|typeof|undefined|var|void|while|with|yield)$/;
