started creating CSS tokenizer

--- a/test/index.html
+++ b/test/index.html
@@ -26,11 +26,39 @@
         <textarea id="editor-active" placeholder="Paste your code here" spellcheck="false"></textarea>
       </div>
 			<div class="block">
+				<p>CSS Code</p>
+				<pre class="cf-CSS">*[class^="cf"] {
+	display: flex;
+	resize: both;
+	color: #fff;
+	font-family: Consolas, 'Courier New', monospace;
+	line-height: normal;
+	outline: none;
+	font-size: 16px;
+	background-color: #101515;
+	white-space: pre;
+	justify-content: flex-start;
+	padding: 10px;
+	resize: none;
+	overflow: auto;
+	
+}
+.code-cf {
+	display: block;
+	background-color: #101515;
+	position: relative;
+	padding-left: 10px;
+	tab-size: 4;
+	width: min-content;
+	resize: none;
+}
+				</pre>
+			</div>
+			<div class="block">
 				<p>HTML Code</p>
-				<pre class="cf-HTML">&lt;script src="../src/core.js" defer>&lt;/script>
+				<pre class="cf-HTML">&lt;head>
+	&lt;script src="../src/core.js" defer>&lt;/script>
 	&lt;script src="../src/HTML.js" defer>&lt;/script>
-	&lt;script src="../src/JavaScript.js" defer>&lt;/script>
-	&lt;script src="./test.js" defer>&lt;/script>
 &lt;/head></pre>
 			</div>
       <div class="block">
