added extension precisifier

--- a/extensions/Precisifier/test/index.html
+++ b/extensions/Precisifier/test/index.html
@@ -7,7 +7,7 @@
   <title>Test</title>
   <script src="../../../src/core.js" defer></script>
   <script src="../../../src/JavaScript.js" defer></script>
-  <script src="index.js"></script>
+  <script defer src="../precisifier.js"></script>
 </head>
 <body>
   
