added code refornatter

--- a/extensions/Precisifier/test/index.html
+++ b/extensions/Precisifier/test/index.html
@@ -1,15 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test</title>
-  <script src="../../../src/core.js" defer></script>
-  <script src="../../../src/JavaScript.js" defer></script>
-  <script defer src="../precisifier.js"></script>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Test</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="../../../src/core.js" defer></script>
+    <script src="../../../src/JavaScript.js" defer></script>
+    <script defer src="../precisifier.js"></script>
+
+    <script defer src="./utils/jQuery-mini.js"></script>
+    <script defer src="./utils/dark-mode.js"></script>
+    <script defer src="./index.js"></script>
+  </head>
+  <body>
+    <header>
+      <h1>Code Reformatter</h1>
+      <label><input type="checkbox" class="toggle-dark-mode"><span class="label"></span></label>
+    </header>
+    <div class="controls">
+      <div class="row">
+        <div class="variables column">
+          <h3>Variables</h3>
+          <div class="windowVars">
+            <label>in window
+            <input
+              type="text"
+              name="WVL"
+              id="windowVariableItem"
+              placeholder="list of variables seperated by spaces"
+            /></label>
+            <input
+              type="button"
+              class="btn-finish"
+              value="Add"
+              id="window-var-add-btn"
+            />
+          </div>
+          <ul id="output-window-vars"></ul>
+        </div>
+        <div class="replacers column">
+          <div class="top">
+            <h3>Change name of variables</h3>
+            <label>Rename 
+            <input
+              type="text"
+              class="varWidth"
+              name="before"
+              id="varNameBefore"
+              placeholder="var1"
+            /></label>
+            <label>as 
+            <input
+              type="text"
+              class="varWidth"
+              name="after"
+              id="varNameAfter"
+              placeholder="var2"
+            /></label>
+            <div>
+              <label><input
+                type="checkbox"
+                name="isObjectProprty"
+                id="isObjectProprty"
+              /> This is a object property</label>
+            </div>
+            <input
+              id="replacer-add-btn"
+              type="button"
+              class="btn-finish"
+              value="Add to list"
+            />
+          </div>
+          <ul id="output-replacer-vars"></ul>
+        </div>
+      </div>
+      <div class="checklists">
+        <label><input type="checkbox" name="removeComment" id="removeComment" /> Remove comment</label>
+        <label><input type="checkbox" name="removeWS" id="removeWS" /> Remove whitespace</label>
+      </div>
+      <div class="finish">
+        <button id="compile" class="btn-finish">Compile</button>
+      </div>
+    </div>
+    <div class="textarea">
+      <textarea id="code">Code Here</textarea>
+    </div>
+  </body>
 </html>
