--- a/extensions/Precisifier/test/index.html
+++ b/extensions/Precisifier/test/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
+    <link rel="stylesheet" href="../../../src/style.css"/>
     <link rel="stylesheet" href="style.css" />
     <script src="../../../src/core.js" defer></script>
     <script src="../../../src/JavaScript.js" defer></script>
@@ -85,7 +86,20 @@
       </div>
     </div>
     <div class="textarea">
-      <textarea id="code">Code Here</textarea>
+      <pre id="code" contenteditable="true">
+function log (msg) {
+  window.console.log(msg);
+}
+      </pre>
+      <div class="output-container">
+        <div class="actions">
+          <h3>Output</h3>
+          <button id="btn-copy-output" class="btn-finish">Copy</button>
+        </div>
+        <pre id="output-code">
+          
+        </pre>
+      </div>
     </div>
   </body>
 </html>
