changes to project

--- a/extensions/Precisifier/test/index.html
+++ b/extensions/Precisifier/test/index.html
@@ -71,7 +71,7 @@
               id="replacer-add-btn"
               type="button"
               class="btn-finish"
-              value="Add to list"
+              value="Add"
             />
           </div>
           <ul id="output-replacer-vars"></ul>
